# simple-video-conferencing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json
client/: .eslintcache  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  Main.js  Participants.css  Participants.js  SelfView.js  VideoContainer.js  index.css  index.js
client/src/atoms/: connectionAtom.js  localStreamAtom.js
client/src/components/: AudioVisualisation.js  ConnectButton.js  MuteButton.js  Participants.js  SelfView.js  ToggleAudioButton.js  ToggleScreenShareButton.js  ToggleVideoButton.js  VideoContainer.css  VideoContainer.js
client/src/hooks/: connectionHooks.js  localStreamHooks.js  signallingHooks.js
signalling/: main.cpp
signalling/src/: Listener.cpp  Listener.h  Session.cpp  Session.h
